syntax = "proto3";

option csharp_namespace = "Proto";

message HumanName {
  string first_name = 1;
  repeated string middle_names = 2;
  string last_name = 3;
  string title = 4;
}